<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.requests.RequestsFragment">
        <!--<include-->
        <!--android:id="@+id/toolbar"-->
        <!--layout="@layout/toolbar" />-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/requests_image" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/card_title"
                        android:fontFamily="@font/montserrat"
                        android:textColor="#000"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:fontFamily="@font/montserrat"
                        android:layout_height="wrap_content"
                        android:text="@string/card_content"
                        android:textColor="#555" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/material_text_button_cancel"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_cancel"
                        android:backgroundTint="@color/colorAccent"
                        app:iconPadding="8dp"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/montserrat"
                        android:textSize="15sp"
                        android:padding="20dp"
                        android:layout_margin="20dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/material_text_button_complete"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_complete"
                        android:backgroundTint="@color/colorAccent"
                        app:iconPadding="8dp"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/montserrat"
                        android:textSize="15sp"
                        android:padding="20dp"
                        android:layout_margin="20dp"
                        android:visibility="gone"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/material_text_button_accept"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:iconPadding="8dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/action_accept"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:padding="20dp"
                        android:layout_margin="20dp"/>


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>